--- a/app/catchup/assets/css/style.css
+++ b/app/catchup/assets/css/style.css
@@ -1,117 +1,18 @@
-/* 
-
-Copyright 2021-2024 SnehTV, Inc.
-Licensed under MIT (https://github.com/mitthu786/TS-JioTV/blob/main/LICENSE)
-Created By: TechieSneh 
-
-*/
-
-@import url("https://cdn.jsdelivr.net/npm/@fontsource/holtwood-one-sc@4.5.1/index.min.css");
-@import url("https://fonts.googleapis.com/css?family=Montserrat:300,400,700,800");
-
-#jtvh1 {
-  text-align: center;
-  font-size: 15px;
-  margin: 15px;
-  padding-bottom: 10px;
-  font-family: "Holtwood One SC", serif;
-  background-color: rgb(255, 255, 255);
-  background-image: rgb(255, 255, 255);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+/* Default font */
+body {
+  font-family: 'Roboto', sans-serif;
 }
 
-#jtvh1 img {
-  width: 80px;
-}
-
+/* Header */
 header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 20px;
+  padding: 10px 50px;
   color: #fff;
 }
 
-@media (max-width: 768px) {
-  header {
-    flex-direction: row;
-    align-items: center;
-    text-align: center;
-  }
-
-  #jtvh1 {
-    margin-bottom: 10px;
-  }
-
-  #jtvh1 img {
-    width: 45px;
-  }
-
-  #userButtons {
-    flex-direction: row;
-    justify-content: center;
-  }
-
-  #userButtons button {
-    font-size: 16px;
-  }
-}
-
-/* LOGIN BUTTON CSS */
-.userButtons {
-  font-size: 14px;
-  font-family: fantasy;
-  text-align-last: center;
-}
-
-#homeButton {
-  border-radius: 10px;
-  font-family: fantasy;
-  border: 2px solid #f0f0f0;
-}
-
-#homeButton:hover {
-  background-color: #ffc107;
-  border: 3px solid #ffc107;
-}
-
-#refreshButton {
-  border-radius: 10px;
-  font-family: fantasy;
-  border: 2px solid #f0f0f0;
-}
-
-#refreshButton:hover {
-  background-color: #00bdc7;
-  border: 3px solid #00bdc7;
-}
-
-#logoutButton {
-  border-radius: 10px;
-  font-family: fantasy;
-  border: 2px solid #f0f0f0;
-}
-
-#logoutButton:hover {
-  background-color: #ff5252;
-  border: 3px solid #ff5252;
-}
-
-* {
-  box-sizing: border-box;
-  margin: 0;
-}
-
-html,
-body {
-  margin: 0;
-  background: #1d232a;
-  font-family: "Montserrat", helvetica, arial, sans-serif;
-  font-size: 14px;
-  font-weight: 400;
-}
-
+/* Movie Card */
 .movie_card {
   position: relative;
   display: block;
@@ -128,6 +29,7 @@ body {
   transition: all 0.4s;
 }
 
+/* Movie Info Section */
 .movie_card .info_section {
   position: relative;
   width: 100%;
@@ -139,73 +41,31 @@ body {
 
 .movie_card .info_section .movie_header {
   position: relative;
-  padding: 25px;
   height: 40%;
 }
 
-.movie_card .info_section .movie_header h1 {
-  color: #fff;
-}
-
-.movie_card .info_section .movie_header h2 {
-  color: #fff;
-}
-
 .movie_card .info_section .movie_header h3 {
-  color: #ffffff;
+  position: absolute;
+  width: 600px;
+  height: 176.91px;
+  left: 0;
+  top: 123.09px;
+  background: #D9D9D9;
+  font-family: 'Roboto', sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: 1px;
+  text-transform: uppercase;
+  color: #FFFFFF;
 }
 
 .movie_card .info_section .movie_header h4 {
   color: #ff3f3f;
 }
 
-.movie_card .info_section .movie_header .minutes {
-  display: inline-block;
-  margin-top: 10px;
-  color: #ffffff;
-  background-color: #00000087;
-  padding: 5px;
-  border-radius: 5px;
-  border: 1px solid rgba(255, 255, 255, 0.13);
-}
-
-.movie_card .info_section .movie_header .type {
-  display: inline-block;
-  color: #ffffff;
-  margin-left: 10px;
-}
-
-.movie_card .info_section .movie_header .locandina {
-  position: relative;
-  float: left;
-  margin-right: 20px;
-  height: 120px;
-  border-radius: 20px;
-  border-style: ridge;
-  box-shadow: 0 0 20px -10px rgba(0, 0, 0, 0.5);
-}
-
-.movie_card .info_section .movie_desc {
-  padding: 25px;
-  height: 50%;
-}
-
-.movie_card .info_section .movie_desc .text {
-  color: #ffffff;
-}
-
-.movie_card .info_section .movie_social {
-  height: 10%;
-  padding-left: 15px;
-  padding-bottom: 20px;
-}
-
-.movie_card .info_section .movie_social ul {
-  list-style: none;
-  padding: 0;
-  margin-top: -15px;
-}
-
+/* Social Icons */
 .movie_card .info_section .movie_social ul li {
   display: inline-block;
   color: rgba(255, 255, 255, 0.4);
@@ -224,63 +84,7 @@ body {
   cursor: pointer;
 }
 
-.movie_card .blur_back {
-  position: absolute;
-  top: 0;
-  z-index: 1;
-  height: 100%;
-  right: 0;
-  background-size: cover;
-  border-radius: 11px;
-}
-
-@media screen and (min-width: 768px) {
-  .movie_header {
-    width: 60%;
-  }
-
-  .movie_desc {
-    width: 50%;
-  }
-
-  .info_section {
-    background: linear-gradient(to right, #0d0d0c 50%, transparent 100%);
-  }
-
-  .blur_back {
-    width: 80%;
-    background-position: -100% 10% !important;
-  }
-}
-
-@media screen and (max-width: 768px) {
-  .movie_card {
-    width: 95%;
-    margin: 70px auto;
-    min-height: 350px;
-    height: auto;
-  }
-
-  .blur_back {
-    width: 100%;
-    background-position: 50% 50% !important;
-  }
-
-  .movie_header {
-    width: 100%;
-    margin-top: 85px;
-  }
-
-  .movie_desc {
-    width: 100%;
-  }
-
-  .info_section {
-    background: linear-gradient(to top, #141413 50%, transparent 100%);
-    display: inline-grid;
-  }
-}
-
+/* Bright Card */
 #bright {
   box-shadow: 0px 0px 150px -45px rgba(255, 51, 0, 0.5);
 }
@@ -289,6 +93,7 @@ body {
   box-shadow: 0px 0px 120px -55px rgba(255, 51, 0, 0.5);
 }
 
+/* Background Image */
 .bright_back {
   background: url("https://i.ibb.co/hWqswL6/jiotvmain.jpg");
   filter: blur(2px);
